Focus GFX and MEX stuff

--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -19,6 +19,11 @@
   PB_MEX_Restore_Order_To_Chihuahua_tt:0 "Chihuahua Loyalty: > §H30%§!"
   PB_MEX_Restore_Order_To_Sonora_tt:0 "Sonora Loyalty: > §H30%§!"
 
+  MEX_Increase_All_Loyalty_tt:0 "All state Loyalty: §G+2%§!"
+  MEX_Decrease_All_Loyalty_tt:0 "All state Loyalty: §R-2%§!"
+
+  PB_MEX_The_Century_Proclamation_tt:0 "All state loyalty is above §H40%§!"
+
   ##########################
   # Dynamic Modifiers
   ##########################
@@ -90,56 +95,67 @@
   PB_MEX_Increase_Loyalty_In_Mexico_City_desc:0 "The Empire of Mexico is on its last legs and if the situation is resolved soon then we may face civil war, or worst yet, the complete collapse of the Mexican nation."
   PB_MEX_Increase_Loyalty_In_Mexico_City_tt:0 "Mexico City Loyalty < §H100%§!"
   MEX_Increase_Mexico_City_Loyalty_tt:0 "Mexico City Loyalty: §G+5%§!"
+  MEX_Decrease_Mexico_City_Loyalty_tt:0 "Mexico City Loyalty: §R-5%§!"
 
   PB_MEX_Increase_Loyalty_In_Guerrero:0 "Increase Loyalty In Guerrero"
   PB_MEX_Increase_Loyalty_In_Guerrero_desc:0 "The Empire of Mexico is on its last legs and if the situation is resolved soon then we may face civil war, or worst yet, the complete collapse of the Mexican nation."
   PB_MEX_Increase_Loyalty_In_Guerrero_tt:0 "Guerrero Loyalty < §H100%§!"
   MEX_Increase_Guerrero_Loyalty_tt:0 "Guerrero Loyalty: §G+5%§!"
+  MEX_Decrease_Guerrero_Loyalty_tt:0 "Guerrero Loyalty: §R-5%§!"
 
   PB_MEX_Increase_Loyalty_In_Veracruz:0 "Increase Loyalty In Veracruz"
   PB_MEX_Increase_Loyalty_In_Veracruz_desc:0 "The Empire of Mexico is on its last legs and if the situation is resolved soon then we may face civil war, or worst yet, the complete collapse of the Mexican nation."
   PB_MEX_Increase_Loyalty_In_Veracruz_tt:0 "Veracruz Loyalty < §H100%§!"
   MEX_Increase_Veracruz_Loyalty_tt:0 "Veracruz Loyalty: §G+5%§!"
+  MEX_Decrease_Veracruz_Loyalty_tt:0 "Veracruz Loyalty: §R-5%§!"
 
   PB_MEX_Increase_Loyalty_In_Oaxaca:0 "Increase Loyalty In Oaxaca"
   PB_MEX_Increase_Loyalty_In_Oaxaca_desc:0 "The Empire of Mexico is on its last legs and if the situation is resolved soon then we may face civil war, or worst yet, the complete collapse of the Mexican nation."
   PB_MEX_Increase_Loyalty_In_Oaxaca_tt:0 "Oaxaca Loyalty < §H100%§!"
   MEX_Increase_Oaxaca_Loyalty_tt:0 "Oaxaca Loyalty: §G+5%§!"
+  MEX_Decrease_Oaxaca_Loyalty_tt:0 "Oaxaca Loyalty: §R-5%§!"
 
   PB_MEX_Increase_Loyalty_In_Chiapas:0 "Increase Loyalty In Chiapas"
   PB_MEX_Increase_Loyalty_In_Chiapas_desc:0 "The Empire of Mexico is on its last legs and if the situation is resolved soon then we may face civil war, or worst yet, the complete collapse of the Mexican nation."
   PB_MEX_Increase_Loyalty_In_Chiapas_tt:0 "Chiapas Loyalty < §H100%§!"
   MEX_Increase_Chiapas_Loyalty_tt:0 "Chiapas Loyalty: §G+5%§!"
+  MEX_Decrease_Chiapas_Loyalty_tt:0 "Chiapas Loyalty: §R-5%§!"
 
   PB_MEX_Increase_Loyalty_In_Jalisco:0 "Increase Loyalty In Jalisco"
   PB_MEX_Increase_Loyalty_In_Jalisco_desc:0 "The Empire of Mexico is on its last legs and if the situation is resolved soon then we may face civil war, or worst yet, the complete collapse of the Mexican nation."
   PB_MEX_Increase_Loyalty_In_Jalisco_tt:0 "Jalisco Loyalty < §H100%§!"
   MEX_Increase_Jalisco_Loyalty_tt:0 "Jalisco Loyalty: §G+5%§!"
+  MEX_Decrease_Jalisco_Loyalty_tt:0 "Jalisco Loyalty: §R-5%§!"
 
   PB_MEX_Increase_Loyalty_In_Tamaulipas:0 "Increase Loyalty In Tamaulipas"
   PB_MEX_Increase_Loyalty_In_Tamaulipas_desc:0 "The Empire of Mexico is on its last legs and if the situation is resolved soon then we may face civil war, or worst yet, the complete collapse of the Mexican nation."
   PB_MEX_Increase_Loyalty_In_Tamaulipas_tt:0 "Tamaulipas Loyalty < §H100%§!"
   MEX_Increase_Tamaulipas_Loyalty_tt:0 "Tamaulipas Loyalty: §G+5%§!"
+  MEX_Decrease_Tamaulipas_Loyalty_tt:0 "Tamaulipas Loyalty: §R-5%§!"
 
   PB_MEX_Increase_Loyalty_In_Coahuila:0 "Increase Loyalty In Coahuila"
   PB_MEX_Increase_Loyalty_In_Coahuila_desc:0 "The Empire of Mexico is on its last legs and if the situation is resolved soon then we may face civil war, or worst yet, the complete collapse of the Mexican nation."
   PB_MEX_Increase_Loyalty_In_Coahuila_tt:0 "Coahuila Loyalty < §H100%§!"
   MEX_Increase_Coahuila_Loyalty_tt:0 "Coahuila Loyalty: §G+5%§!"
+  MEX_Decrease_Coahuila_Loyalty_tt:0 "Coahuila Loyalty: §R-5%§!"
 
   PB_MEX_Increase_Loyalty_In_Durango:0 "Increase Loyalty In Durango"
   PB_MEX_Increase_Loyalty_In_Durango_desc:0 "The Empire of Mexico is on its last legs and if the situation is resolved soon then we may face civil war, or worst yet, the complete collapse of the Mexican nation."
   PB_MEX_Increase_Loyalty_In_Durango_tt:0 "Durango Loyalty < §H100%§!"
   MEX_Increase_Durango_Loyalty_tt:0 "Durango Loyalty: §G+5%§!"
+  MEX_Decrease_Durango_Loyalty_tt:0 "Durango Loyalty: §R-5%§!"
 
   PB_MEX_Increase_Loyalty_In_Chihuahua:0 "Increase Loyalty In Chihuahua"
   PB_MEX_Increase_Loyalty_In_Chihuahua_desc:0 "The Empire of Mexico is on its last legs and if the situation is resolved soon then we may face civil war, or worst yet, the complete collapse of the Mexican nation."
   PB_MEX_Increase_Loyalty_In_Chihuahua_tt:0 "Chihuahua Loyalty < §H100%§!"
   MEX_Increase_Chihuahua_Loyalty_tt:0 "Chihuahua Loyalty: §G+5%§!"
+  MEX_Decrease_Chihuahua_Loyalty_tt:0 "Chihuahua Loyalty: §R-5%§!"
 
   PB_MEX_Increase_Loyalty_In_Sonora:0 "Increase Loyalty In Sonora"
   PB_MEX_Increase_Loyalty_In_Sonora_desc:0 "The Empire of Mexico is on its last legs and if the situation is resolved soon then we may face civil war, or worst yet, the complete collapse of the Mexican nation."
   PB_MEX_Increase_Loyalty_In_Sonora_tt:0 "Sonora Loyalty < §H100%§!"
   MEX_Increase_Sonora_Loyalty_tt:0 "Sonora Loyalty: §G+5%§!"
+  MEX_Decrease_Sonora_Loyalty_tt:0 "Sonora Loyalty: §R-5%§!"
 
   PB_MEX_Restore_Order_To_Coahuila:0 "Restore Order To Coahuila"
   PB_MEX_Restore_Order_To_Coahuila_desc:0 "The North has long been unruly, it is time we change this state of affairs and restore order to the affected regions permanently."
@@ -152,6 +168,12 @@
 
   PB_MEX_Restore_Order_To_Sonora:0 "Restore Order To Sonora"
   PB_MEX_Restore_Order_To_Sonora_desc:0 "The North has long been unruly, it is time we change this state of affairs and restore order to the affected regions permanently."
+
+  PB_MEX_Unleash_The_Greyshirts:0 "Unleash The Greyshirts"
+  PB_MEX_Unleash_The_Greyshirts_desc:0 "The Greyshirts are the militia branch of the Mexican Neo-Imperialist party led by Gustavo Sáenz de Sicilia, while the party has remained neutral to the affairs of the monarchy it is by all definitions fervently anti-Jacobin. So much so that they have become a seemingly necessary tool for our state to rely upon."
+
+  SCA_Road_To_Revolution:0 "Road To Revolution"
+  SCA_Road_To_Revolution_desc:0 ""
 
   ##########################
   # COUNTRY FLAG
@@ -169,6 +191,10 @@
   PB_MEX_Revolutionary_Legacy_desc:0 "The Great Northern Revolution, known in Mexico proper as the Great Northern Rebellion, was the collapse of Mexico City's authority in their Northern provinces. The catastrophic defeat of Imperial forces lead to the secession of Tejas, Santa Fe, Rio Grande, Yucatan and California, and destroyed Mexico's repuation as a regional power. Even decades later, the wounds of the 1878 Revolutions are still raw for the Empire, and the reactionary government response drove much of Mexico's scientific and educational talent North to greener pastures."
   PB_MEX_April_Crisis_idea:0 "April Crisis"
   PB_MEX_April_Crisis_idea_desc:0 ""
+  PB_MEX_April_Crisis_idea_2:0 "April Crisis"
+  PB_MEX_April_Crisis_idea_2_desc:0 ""
+  PB_MEX_April_Crisis_idea_3:0 "Legacy Of The April Crisis"
+  PB_MEX_April_Crisis_idea_3_desc:0 ""
 
   ##########################
   # FOCUSES
