--- a/localisation/english/ROTG_coalition_gui_l_english.yml
+++ b/localisation/english/ROTG_coalition_gui_l_english.yml
@@ -88,24 +88,24 @@ remove_right_jc_coalition_tip: "This will remove the §RJacobin§! Party from th
 
 
 
-leading_coalition_ni_tip: "This will add the §GNeo Imperialist§! Party to the §ARuling Coalition§!."
-leading_coalition_ds_tip: "This will add the §gDespotist§! Party to the §ARuling Coalition§!."
-leading_coalition_rc_tip: "This will add the §LReactionary§! Party to the §ARuling Coalition§!."
-leading_coalition_an_tip: "This will add the §YAnarcho Liberal§! Party to the §ARuling Coalition§!."
-leading_coalition_cn_tip: "This will add the §BConservative§! Party to the §ARuling Coalition§!."
-leading_coalition_lb_tip: "This will add the §OLiberal§! Party to the §ARuling Coalition§!."
-leading_coalition_ss_tip: "This will add the §RState Socialist§! Party to the §ARuling Coalition§!."
-leading_coalition_jc_tip: "This will add the §RJacobin§! Party to the §ARuling Coalition§!."
+leading_coalition_ni_tip: "This will add the §GNeo Imperialist§! Party to the §GRuling Coalition§!."
+leading_coalition_ds_tip: "This will add the §gDespotist§! Party to the §GRuling Coalition§!."
+leading_coalition_rc_tip: "This will add the §LReactionary§! Party to the §GRuling Coalition§!."
+leading_coalition_an_tip: "This will add the §YAnarcho Liberal§! Party to the §GRuling Coalition§!."
+leading_coalition_cn_tip: "This will add the §BConservative§! Party to the §GRuling Coalition§!."
+leading_coalition_lb_tip: "This will add the §OLiberal§! Party to the §GRuling Coalition§!."
+leading_coalition_ss_tip: "This will add the §RState Socialist§! Party to the §GRuling Coalition§!."
+leading_coalition_jc_tip: "This will add the §RJacobin§! Party to the §GRuling Coalition§!."
 
 
-remove_leading_coalition_ni_tip: "This will remove the §GNeo Imperialist§! Party from the §ARuling Coalition§!."
-remove_leading_coalition_ds_tip: "This will remove the §gDespotist§! Party from the §ARuling Coalition§!."
-remove_leading_coalition_rc_tip: "This will remove the §LReactionary§! Party from the §ARuling Coalition§!."
-remove_leading_coalition_an_tip: "This will remove the §YAnarcho Liberal§! Party from the §ARuling Coalition§!."
-remove_leading_coalition_cn_tip: "This will remove the §BConservative§! Party from the §ARuling Coalition§!."
-remove_leading_coalition_lb_tip: "This will remove the §OLiberal§! Party from the §ARuling Coalition§!."
-remove_leading_coalition_ss_tip: "This will remove the §RState Socialist§! Party from the §ARuling Coalition§!."
-remove_leading_coalition_jc_tip: "This will remove the §RJacobin§! Party from the §ARuling Coalition§!."
+remove_leading_coalition_ni_tip: "This will remove the §GNeo Imperialist§! Party from the §GRuling Coalition§!."
+remove_leading_coalition_ds_tip: "This will remove the §gDespotist§! Party from the §GRuling Coalition§!."
+remove_leading_coalition_rc_tip: "This will remove the §LReactionary§! Party from the §GRuling Coalition§!."
+remove_leading_coalition_an_tip: "This will remove the §YAnarcho Liberal§! Party from the §GRuling Coalition§!."
+remove_leading_coalition_cn_tip: "This will remove the §BConservative§! Party from the §GRuling Coalition§!."
+remove_leading_coalition_lb_tip: "This will remove the §OLiberal§! Party from the §GRuling Coalition§!."
+remove_leading_coalition_ss_tip: "This will remove the §RState Socialist§! Party from the §GRuling Coalition§!."
+remove_leading_coalition_jc_tip: "This will remove the §RJacobin§! Party from the §GRuling Coalition§!."
 
 
 
@@ -133,10 +133,10 @@ remove_ban_jc_tip: "The §RJacobin§! Party will no longer be §RBanned§!."
 
 
 unban_all_parties_tip: "All Parties will be no longer §RBanned§!."
-make_center_coalition_leading_tip: "The §YCenter§! Coalition will become the §ARuling Coalition§!"
-make_farleft_coalition_leading_tip: "The §RFar Left§! Coalition will become the §ARuling Coalition§!"
-make_farright_coalition_leading_tip: "The §LFar Right§! Coalition will become the §ARuling Coalition§!"
-make_right_coalition_leading_tip: "The §BRight§! Coalition will become the §ARuling Coalition§!"
+make_center_coalition_leading_tip: "The §YCenter§! Coalition will become the §GRuling Coalition§!"
+make_farleft_coalition_leading_tip: "The §RFar Left§! Coalition will become the §GRuling Coalition§!"
+make_farright_coalition_leading_tip: "The §LFar Right§! Coalition will become the §GRuling Coalition§!"
+make_right_coalition_leading_tip: "The §BRight§! Coalition will become the §GRuling Coalition§!"
 
 
 
@@ -144,5 +144,5 @@ center_coalition_tooltip: "This Party is part of the §YCenter§! Coalition."
 farleft_coalition_tooltip: "This Party is part of the §RFar Left§! Coalition."
 farright_coalition_tooltip: "This Party is part of the §LFar Right§! Coalition."
 right_coalition_tooltip: "This Party is part of the §BRight§! Coalition."
-leading_coalition_tooltip: "§AThis Party is part of the Leading coalition which currently Rules over our Nation.§!"
+leading_coalition_tooltip: "§GThis Party is part of the Leading coalition which currently Rules over our Nation.§!"
 party_banned_tooltip: "This Party is currently §RBanned§!."
