--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1382,7 +1382,7 @@
   SCA17optb:0 "With Americans? No thank you."
 
   SCA18title:0 "Birth Of The Global Revolutionary Front"
-  SCA18desc:0 "" 
+  SCA18desc:0 "To the newest member of the Revolutionary Struggle,/n/nWe have observed your conflict in the North American with a great deal of interested. You have proven yourselves a capable fighting force, one that was willing to march from coast to coast in order to keep the flames of revolution. Though it is said that the light that burns half as bright burns half as long, you have broke this mould. You've burned bright and burned long. Showing the world that the Jacobin ideology is some just confined to Trade Unions and the grumbling of old men, but a true force for change. And as you seek spread this ideology to the rest of the world, liberating the people, we understand that you wish to work closely with our government. We are happy to accept this offer, and announce the creation of the Global Revolutionary Front, with the goal of breaking the shackles of Imperialism across the world. It is our sincerest hope that together we can ride ahead into a Revolutionary future./n/nSigned, Japanese Foreign Minister" 
   SCA18opta:0 "Workers of the world unite!"
 
   SCA19title:0 "A Dismissive Letter From Tokyo"
@@ -1406,7 +1406,7 @@
   SCA22opta:0 "Butler was always a fool."
 
   SCA23title:0 "War Plan: East"
-  SCA23desc:0 "" 
+  SCA23desc:0 "TOP SECRET: WAR PLAN EAST. FOR STRATEGIC COMMAND AND PRESIDENT'S EYES ONLY/n/nWar Plan: East calls for the liberation of the oppressed people on the United Commonwealth. This will be the largest military campaign in our history and thus must be carefully planned. The operation will be launched in three sectors: Sector North, Sector Centre and Sector South./nThe North sector will attack along the Ohio River, trying to reach New England and the capital Philadelphia./nThe Southern sector will attack toward Florida with the goal of capturing the region's agricultural centres and naval based./nAnd finally, the Central sector will march toward Baltimore and Virgina, by taking the railway network there, we can sever all land based supply routes from North to South./nIf our offensive is pushed back, we are to retreat and fortify along the Mississippi river and hold there until the offensive can be renewed./n/nThe plan, though risky and certain to end in heavy losses, is the most viable path to victory and the liberation of the Eastern Seaboard. It is not up to us to make this a reality./n/nLong Live the SCA." 
   SCA23opta:0 "Total War!"
 
   SCA24title:0 "The Future of the North?"
