--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -28,6 +28,7 @@
   PB_MEX_Invite_Foreign_Industrialists_2_tt:0 "\nThis national spirit will be removed if we are in a state of war."
   PB_MEX_The_Hispanic_Workhorse_tt:0 "For every state that is §HLoyal§! gain one military factory:\n\n"
   PB_MEX_The_Hispanic_Workhorse_2_tt:0 "Mexico City will gain §HMax§! infrastructure"
+  PB_MEX_Doctrinal_Evolution_tt:0 "For every state that is §HLoyal§! gain 10 army experience:\n\n"
 
   ##########################
   # Dynamic Modifiers
@@ -174,8 +175,8 @@
   PB_MEX_Restore_Order_To_Sonora:0 "Restore Order To Sonora"
   PB_MEX_Restore_Order_To_Sonora_desc:0 "The North has long been unruly, it is time we change this state of affairs and restore order to the affected regions permanently."
 
-  PB_MEX_Unleash_The_Greyshirts:0 "Unleash The Greyshirts"
-  PB_MEX_Unleash_The_Greyshirts_desc:0 "The Greyshirts are the militia branch of the Mexican Neo-Imperialist party led by Gustavo Sáenz de Sicilia, while the party has remained neutral to the affairs of the monarchy it is by all definitions fervently anti-Jacobin. So much so that they have become a seemingly necessary tool for our state to rely upon."
+  PB_MEX_Unleash_The_Greyshirts:0 "Unleash The Gold Shirts"
+  PB_MEX_Unleash_The_Greyshirts_desc:0 "The Gold Shirts are the militia branch of the Mexican Neo-Imperialist party led by Gustavo Sáenz de Sicilia, while the party has remained neutral to the affairs of the monarchy it is by all definitions fervently anti-Jacobin. So much so that they have become a seemingly necessary tool for our state to rely upon."
 
   SCA_Road_To_Revolution:0 "Road To Revolution"
   SCA_Road_To_Revolution_desc:0 ""
@@ -190,6 +191,8 @@
   ##########################
   PB_MEX_Vestigial_Empire:0 "Vestigial Empire"
   PB_MEX_Vestigial_Empire_desc:0 "Mexico once spanned from the arid deserts of the Mojave to the sweltering jungles of Centroamerica, but that was a long time ago. A century of economic decline, political infighting and ethnic separatism have shredded the Mexican Empire down to a nub. Mexico has become the Sick Man of the Americas, with an economy in freefall and political radicalization growing day by day. The military-led sham democracy is proving increasingly incapable of controlling public unrest, and the danger of civil war seems more real every day."
+  PB_MEX_Vestigial_Empire_2:0 "Vestigial Empire"
+  PB_MEX_Vestigial_Empire_2_desc:0 "Mexico once spanned from the arid deserts of the Mojave to the sweltering jungles of Centroamerica, but that was a long time ago. A century of economic decline, political infighting and ethnic separatism have shredded the Mexican Empire down to a nub. Mexico has become the Sick Man of the Americas, with an economy in freefall and political radicalization growing day by day. The military-led sham democracy is proving increasingly incapable of controlling public unrest, and the danger of civil war seems more real every day."
   PB_MEX_Suspended_Constitution:0 "Suspended Constitution"
   PB_MEX_Suspended_Constitution_desc:0 "The Mexican Constitution was suspended following the election of the socialist Popular Front in 1928. A committee of military, business, and intelligentsia interests have governed the country without a constitution ever since. Despite their best efforts, political unrest has never quite ended, and the harsh hand of the military has only been stayed by cooler heads. Pressure from the Emperor has pushed the junta to allow for controlled elections in 1933 in the hope that the veneer of democracy will quell public anger."
   PB_MEX_Revolutionary_Legacy:0 "Legacy of 1878"
