--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -19,6 +19,7 @@
   
   PB_MEX_SIG:0 "SIG"
   PB_MEX_Mendoza:0 "Productos Mendoza"
+  PB_MEX_Ramirez:0 "Grupo Industrial Ramirez"
 
   ##########################
 
