--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -1726,8 +1726,8 @@
  TEX_cn_ADJ:0 "Teja"
  TEX_an_ADJ:0 "Teja"
 
- MEX_ni:0 "Empire of Mexico"
- MEX_ni_DEF:0 "The Empire of Mexico"
+ MEX_ni:0 "Mexican National State"
+ MEX_ni_DEF:0 "The Mexican National State"
  MEX_ds:0 "Empire of Mexico"
  MEX_ds_DEF:0 "The Empire of Mexico"
  MEX_rc:0 "Empire of Mexico"
@@ -1740,8 +1740,8 @@
  MEX_lb_DEF:0 "The Mexican Republic"
  MEX_ss:0 "Mexican Republic"
  MEX_ss_DEF:0 "The Mexican Republic"
- MEX_jc:0 "Mexican Republic"
- MEX_jc_DEF:0 "The Mexican Republic"
+ MEX_jc:0 "Mexican Revolutionary Front"
+ MEX_jc_DEF:0 "The Mexican Revolutionary Front"
  MEX_ni_ADJ:0 "Mexican"
  MEX_rc_ADJ:0 "Mexican"
  MEX_lb_ADJ:0 "Mexican"
