--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -7,11 +7,15 @@
   # CHARACTERS
   ##########################
 
-  PB_MEX_Agustin_IV_desc:0 ""
+  PB_MEX_Agustin_IV_desc:0 "§YBorn:§! 1/2/1880\n\n§YAgustin de Iturbide IV§! was never born into the days of Mexican glory, having just missed the chaotic revolutions of 1878 that saw the North and Yucatan break free from North America's once largest nation in both size and economic relevance. Spurred from continuous neglect from Mexico City and an increasingly hostile national identity towards Mexican rule saw California, Tejas, Rio Grande, Sante Fe, and finally Yucatan break free from the once prestigious Mexican empire. Agustin de Iturbide III would soon commit suicide following the birth of his son as a result of his deteriorating health following the Crisis of 1878 leaving the empire in an even worse state than before the king’s death. Being a child emperor meant many tasks were delegated to close family officials and friends, of whom were mostly members of the Mexican army. The end result being a man who would eventually be moulded by the words of corrupt, foolish, and indecent career politicians.\n\nMexico would quickly enter the darkest age of its history, with the king continuously being subjected to ridicule and disobedience, further exacerbating the already ailing nation. With the county on its last legs a lifeline was thrown to the king in the form of a new democratic mandate that would strip the king of his powers and give more authority to the king’s vast collection of council members. However, this only strengthened the power of Mexico’s corrupt and soon the Empire of Mexico would become nothing more than a country squeezed for every single ounce of profit it could produce, however a diseased cow can only feed so many mouths."
 
   ##########################
-  # TOOLTIPS
+  # MINISTERS
   ##########################
+
+  MEX_PB_Nicolas_Rodriguez_Carrasco:0 "Nicolás Rodríguez Carrasco"
+  MEX_PB_Eugenio_Garza_Sada:0 "Eugenio Garza Sada"
+ 
 
 
   ##########################
@@ -231,13 +235,13 @@
   PB_MEX_The_Sick_Man_Of_America_desc:0 "The Empire of Mexico is a shell of its former self, its economy, military, and its general prestige has been in a state of rapid decline. Few can recall a day when they were proud to be Mexican and fewer can say they welcome the Emperor with open arms. With the upcoming national election in April many within the Junta fear a Jacobin takeover and should such a outcome occur then Mexico's short taste of democracy, no matter how flawed, will come to a crashing halt. Mexico's days are numbered and if she plans on rebuilding her empire of old she will need one hell of a miracle."
 
   PB_MEX_The_April_Crisis:0 "The April Crisis"
-  PB_MEX_The_April_Crisis_desc:0 "As predicted by the ruling Junta the Mexican Revolutionary Committee has defeated all political opposition in a major landslide victory. However to much surprise from the Mexican population the Junta and Agustin IV have jointly banned and declared the Mexican Revolutionary Committee as a foreign sponsored terrorist organization, pointing the blame to none other than Japan. While Tokyo has rejected any idea of conducting any sort of subversive activities against Mexico the fabricated claim from the Junta was more than enough to see the vote from the Jacobin party no longer considered accurate. As a result of this sudden measure Mexico and its so-called empire have now entered a stage of political violence never yet seen."
+  PB_MEX_The_April_Crisis_desc:0 "As predicted by the ruling Junta the Frente Unido Mexicano has defeated all political opposition in a major landslide victory. However to much surprise from the Mexican population the Junta and Agustin IV have jointly banned and declared the Frente Unido Mexicano as a foreign sponsored terrorist organization, pointing the blame to none other than Japan. While Tokyo has rejected any idea of conducting any sort of subversive activities against Mexico the fabricated claim from the Junta was more than enough to see the vote from the Jacobin party no longer considered accurate. As a result of this sudden measure Mexico and its so-called empire have now entered a stage of political violence never yet seen."
 
   PB_MEX_Address_The_Banditry_Issue:0 "Address The Banditry Issue"
   PB_MEX_Address_The_Banditry_Issue_desc:0 "Much of the North lays subject to roaming bandits which has caused a large loss of political support from the region, and is likely why the Mexican Revolutionary Committee was able to gain such a foothold over there in comparison to other states. We must wash these lands of such vermin and restore Imperial rule if we wish to avoid an all-out civil war."
 
   PB_MEX_Crush_Democratic_Sympathizers:0 "Crush Democratic Sympathizers"
-  PB_MEX_Crush_Democratic_Sympathizers_desc:0 "Following the April Crisis, other, more democratically aligned individuals, have begun siding with the Mexican Revolutionary Committee or the Mexican Socialist Party. If we continue to let such actions slide, we may face a bureaucratic void of educated persons within the Junta, by enforcing or intimidating these ministers we can ensure that this nation has the full support of its ministers at the very least. Although many may not take kindly to such extreme actions. "
+  PB_MEX_Crush_Democratic_Sympathizers_desc:0 "Following the April Crisis, other, more democratically aligned individuals, have begun siding with the Frente Unido Mexicano or the Partido Socialista Mexicano. If we continue to let such actions slide, we may face a bureaucratic void of educated persons within the Junta, by enforcing or intimidating these ministers we can ensure that this nation has the full support of its ministers at the very least. Although many may not take kindly to such extreme actions. "
 
   PB_MEX_Everyone_Calm_The_Hell_Down:0 "Everyone Calm The Hell Down"
   PB_MEX_Everyone_Calm_The_Hell_Down_desc:0 "Despite the actions of the Junta and its handling of the situation there is still a large pool of opposition to be found, primarily in the north. By conducting one fell swoop with local military garrisons we may be able to root out this problem before it overstays its welcome. Although there is a chance that the military, as loyal as it is, may be unable to produce any substantial results."
