--- a/localisation/english/PB_Traits_l_english.yml
+++ b/localisation/english/PB_Traits_l_english.yml
@@ -25,6 +25,8 @@
   cat_terror_weapons_research:0 "Terror Weapons Research Speed"
   cat_augmented_infantry_research:0 "Augmented Infantry Research Speech"
 
+  PB_Violent_Individual:0 "Violent Individual"
+
 
   augmented:0 "Augmented"
   augmented_desc:0 "This general has been biomechanically enhanced, either as a medical necessity or to improve combat performance. While this improves aspects of physical and mental performance, human augmentation is not an exact science and users require regular genetic therapy to prevent Acute Bodily Rejection Syndrome and septic illness."
