--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -8,25 +8,49 @@
   ##########################
 
   PB_MEX_Agustin_IV_desc:0 "§YBorn:§! 1/2/1880\n\n§YAgustin de Iturbide IV§! was never born into the days of Mexican glory, having just missed the chaotic revolutions of 1878 that saw the North and Yucatan break free from North America's once largest nation in both size and economic relevance. Spurred from continuous neglect from Mexico City and an increasingly hostile national identity towards Mexican rule saw California, Tejas, Rio Grande, Sante Fe, and finally Yucatan break free from the once prestigious Mexican empire. Agustin de Iturbide III would soon commit suicide following the birth of his son as a result of his deteriorating health following the Crisis of 1878 leaving the empire in an even worse state than before the king’s death. Being a child emperor meant many tasks were delegated to close family officials and friends, of whom were mostly members of the Mexican army. The end result being a man who would eventually be moulded by the words of corrupt, foolish, and indecent career politicians.\n\nMexico would quickly enter the darkest age of its history, with the king continuously being subjected to ridicule and disobedience, further exacerbating the already ailing nation. With the county on its last legs a lifeline was thrown to the king in the form of a new democratic mandate that would strip the king of his powers and give more authority to the king’s vast collection of council members. However, this only strengthened the power of Mexico’s corrupt and soon the Empire of Mexico would become nothing more than a country squeezed for every single ounce of profit it could produce, however a diseased cow can only feed so many mouths."
+  MEX_gustavo_olivares_desc:0 "§YBorn:§! 25/11/1885\n\n§YGustavo Sáenz de Sicilia Olivares§! was once a Mexican film director, producer, and writer who produced movies such as Aguiluchos Mexicanos and La boda de Rosario. Gustavo would seemingly remain as nothing more than an influential individual of Mexico’s film industry, however the ever-dire status of the nation, the increasingly popular Jacobin party of Mexico, and an economy in free fall seemingly fuelled Mr. Sicilia’s hatred of the far-left, and oddly those of Asian descent, namely those of Japanese descent. No one event had influenced Gustavo’s political opinions but instead a slow, gradual poisoning of the mind had ultimately convinced the now sole dictator of Mexico that Neo-Imperialist ideology was the nation’s only hope. Inspired by Prussian-French far-right political developments of the late 1920s and early 30s, Gustavo would come to found the National Rejuvenation Party of Mexico in 1928 alongside his brother Enrique. The party is extremely antisemitic, anti-Asian, middle-class orientated, and fervently pro-catholic. Gustavo has inherited a broken nation alongside his loyal paramilitary group the gold shirts, the question now is whether he will revive the Mexican spirit, or fracture what ever little is left of it like all those before him."
 
+  PB_MEX_Agustin_IV_2:0 "test"
   ##########################
   # MINISTERS
   ##########################
 
+  MEX_PB_Emilio_Portes_Gil:0 "Emilio Portes Gil"
+  MEX_PB_Juan_Andreu_Almazan:0 "Juan Andreu Almazán"
+
   MEX_PB_Nicolas_Rodriguez_Carrasco:0 "Nicolás Rodríguez Carrasco"
   MEX_PB_Eugenio_Garza_Sada:0 "Eugenio Garza Sada"
+  MEX_PB_Roque_Gonzalez_Garza:0 "Roque González Garza"
+  MEX_PB_Jose_Vasconcelos:0 "José Vasconcelos"
+
+  MEX_PB_Cabinet_Crisis_EM:0 "Cabinet Crisis"
+	MEX_PB_Cabinet_Crisis_HOG:0 "Cabinet Crisis"
+	MEX_PB_Cabinet_Crisis_FM:0 "Cabinet Crisis"
+  MEX_PB_Cabinet_Crisis_IM:0 "Cabinet Crisis"
+
+
+  ##########################
+  # PARTY NAMES
+  ##########################
+
+  MEX_ds_exile_long:0 "Restos Monárquicos Exiliados"
+  MEX_ds_exile:0 "Restos Monárquicos Exiliados"
  
 
 
   ##########################
-  # Tech Teams
+  # TECH TEAMS
+  ##########################
   
   PB_MEX_SIG:0 "SIG"
   PB_MEX_Mendoza:0 "Productos Mendoza"
   PB_MEX_Ramirez:0 "Grupo Industrial Ramirez"
 
   ##########################
+  # TOOLTIPS
+  ##########################
 
+  PB_Cabinet_Crisis:0 "Cabinet Crisis"
 
   MEX_Spacing_tt:0 "        \n"
   PB_MEX_Restore_Order_To_Coahuila_tt:0 "Coahuila Loyalty: > §H30%§!"
@@ -37,7 +61,7 @@
   MEX_Increase_All_Loyalty_tt:0 "All state Loyalty: §G+2%§!"
   MEX_Decrease_All_Loyalty_tt:0 "All state Loyalty: §R-2%§!"
 
-  PB_MEX_The_Century_Proclamation_tt:0 "All state loyalty is above §H40%§!"
+  PB_MEX_The_Century_Proclamation_tt:0 "All state loyalty is above §H25%§!"
 
   PB_MEX_Invite_Foreign_Industrialists_tt:0 "For every state that is §HLoyal§! gain one civilian factory:\n\n"
   PB_MEX_Invite_Foreign_Industrialists_2_tt:0 "\nThis national spirit will be removed if we are in a state of war."
