A Great and Big Step for Development

--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -45,6 +45,18 @@
   PB_MEX_SIG:0 "SIG"
   PB_MEX_Mendoza:0 "Productos Mendoza"
   PB_MEX_Ramirez:0 "Grupo Industrial Ramirez"
+  PB_MEX_EIEC:0 "Edison Imperial Electric Company"
+  PB_MEX_Astimar:0 "ASTIMAR"
+  PB_MEX_Talleres:0 "Talleres Nacionales de Construcciones Aeronáuticas"
+  PB_MEX_Panhard:0 "Panhard-Mexico"
+  PB_MEX_Steyr:0 "Steyr-Daimler-Puch Mexico"
+  PB_MEX_Green_Complex:0 "Revolución Verde"
+
+  PB_MEX_Standard_Oil:0 "Union Standard Oil Company"
+
+  PB_Standard_Oil:0 "Oil Company"
+  PB_EIEC_Foreign:0 "Electronics Megacorp"
+  PB_Agroponics_Team:0 "Agroponics Concern"
 
   ##########################
   # TOOLTIPS
