--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2546,4 +2546,10 @@
  PRS_dresden:0 "The Dresden Declaration"
  PRS_hamburg:0 "The Hamburg Conference"
  PRS_reunification:0 "Reunification"
+
+ TREE_FILTER_TOGGLE:0 "§GClick§! to toggle showing of more filters"
+ confirm_cancel_national_focus:0 "Cancel National Focus"
+ confirm_cancel_national_focus_progress_loss_singular:0 "You will lose §R$LOST_DAYS$§! day of progress."
+ confirm_cancel_national_focus_progress_loss_plural:0 "You will lose §R$LOST_DAYS$§! days of progress."
+ confirm_cancel_national_focus_desc:0 "Are you sure you want to cancel the national focus §H$FOCUS_NAME$§!?"
  
