Middle East Glow Up (Literally)

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -900,8 +900,21 @@
  VICTORY_POINTS_3942:0 "Deir az-Zur"
  VICTORY_POINTS_10106:0 "Mosul"
  VICTORY_POINTS_2065:0 "Arak"
- VICTORY_POINTS_7994:0 "Karbala"
- VICTORY_POINTS_8001:0 "Najaf"
+ VICTORY_POINTS_7994:0 "Hillah"
+ VICTORY_POINTS_10876:0 "Karbala"
+ VICTORY_POINTS_78:0 "Amara"
+ VICTORY_POINTS_13284:0 "Najaf"
+ VICTORY_POINTS_13282:0 "Baquba"
+ VICTORY_POINTS_13283:0 "Samarra"
+ VICTORY_POINTS_3795:0 "Ramadi"
+ VICTORY_POINTS_1549:0 "Heseke"
+ VICTORY_POINTS_12476:0 "Colemerg"
+ VICTORY_POINTS_12029:0 "Iskandarūn"
+ VICTORY_POINTS_13286:0 "Al-Hamah"
+ VICTORY_POINTS_4115:0 "Aqaba"
+ VICTORY_POINTS_7170:0 "Irbid"
+ VICTORY_POINTS_1065:0 "Haifa"
+ VICTORY_POINTS_12726:0 "Nasiriyah"
  VICTORY_POINTS_3996:0 "Giza"
  VICTORY_POINTS_12049:0 "Port Said"
  VICTORY_POINTS_1068:0 "Beni Suef"
