--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -17,6 +17,8 @@
 
   MEX_PB_Emilio_Portes_Gil:0 "Emilio Portes Gil"
   MEX_PB_Juan_Andreu_Almazan:0 "Juan Andreu Almazán"
+  MEX_PB_Joaquin_Amaro_Dominguez:0 "Joaquín Amaro Domínguez"
+  MEX_PB_Abelardo_Rodriguez:0 "Abelardo Rodriguez"
 
   MEX_PB_Nicolas_Rodriguez_Carrasco:0 "Nicolás Rodríguez Carrasco"
   MEX_PB_Eugenio_Garza_Sada:0 "Eugenio Garza Sada"
@@ -248,6 +250,10 @@
   PB_MEX_Suspended_Constitution_desc:0 "The Mexican Constitution was suspended following the election of the socialist Popular Front in 1928. A committee of military, business, and intelligentsia interests have governed the country without a constitution ever since. Despite their best efforts, political unrest has never quite ended, and the harsh hand of the military has only been stayed by cooler heads. Pressure from the Emperor has pushed the junta to allow for controlled elections in 1933 in the hope that the veneer of democracy will quell public anger."
   PB_MEX_Revolutionary_Legacy:0 "Legacy of 1878"
   PB_MEX_Revolutionary_Legacy_desc:0 "The Great Northern Revolution, known in Mexico proper as the Great Northern Rebellion, was the collapse of Mexico City's authority in their Northern provinces. The catastrophic defeat of Imperial forces lead to the secession of Tejas, Santa Fe, Rio Grande, Yucatan and California, and destroyed Mexico's repuation as a regional power. Even decades later, the wounds of the 1878 Revolutions are still raw for the Empire, and the reactionary government response drove much of Mexico's scientific and educational talent North to greener pastures."
+  PB_MEX_Revolutionary_Legacy_2:0 "Legacy of 1878"
+  PB_MEX_Revolutionary_Legacy_2_desc:0 "The Great Northern Revolution, known in Mexico proper as the Great Northern Rebellion, was the collapse of Mexico City's authority in their Northern provinces. The catastrophic defeat of Imperial forces lead to the secession of Tejas, Santa Fe, Rio Grande, Yucatan and California, and destroyed Mexico's repuation as a regional power. Even decades later, the wounds of the 1878 Revolutions are still raw for the Empire, and the reactionary government response drove much of Mexico's scientific and educational talent North to greener pastures."
+  PB_MEX_Revolutionary_Legacy_3:0 "Legacy of 1878"
+  PB_MEX_Revolutionary_Legacy_3_desc:0 "The Great Northern Revolution, known in Mexico proper as the Great Northern Rebellion, was the collapse of Mexico City's authority in their Northern provinces. The catastrophic defeat of Imperial forces lead to the secession of Tejas, Santa Fe, Rio Grande, Yucatan and California, and destroyed Mexico's repuation as a regional power. Even decades later, the wounds of the 1878 Revolutions are still raw for the Empire, and the reactionary government response drove much of Mexico's scientific and educational talent North to greener pastures."
   PB_MEX_April_Crisis_idea:0 "April Crisis"
   PB_MEX_April_Crisis_idea_desc:0 ""
   PB_MEX_April_Crisis_idea_2:0 "April Crisis"
@@ -292,10 +298,10 @@
   PB_MEX_The_Century_Proclamation_desc:0 "After months of political turmoil Mexico has finally returned to some sense of stability. Augustin IV in the streets of Mexico City had announced a new century for the Empire of Mexico, one centred around the rapid expansion of the nation’s economy, military, and territories. Whilst few criticisms could be heard from the crowd of spectators most of the emperor’s audience cheered in patriotic delight. The Junta too confirmed the claims made by the Emperor and for once in the empire’s lifetime everything looks to be going to plan. "
 
   PB_MEX_Empire_Eternal:0 "Empire Eternal"
-  PB_MEX_Empire_Eternal_desc:0 ""
+  PB_MEX_Empire_Eternal_desc:0 "Emperor Agustin has managed beyond all belief to crush the revolutionary Jacobin threat that has plagued Mexico for well over two decades. While red banners may still fly high in the empires furthest corners most, if not all the major urban centres have pledged their unquestioning loyalty to the Iturbide dynasty. Now is the time for Mexico to look to her future and claim back what was rightfully stolen from her."
 
   PB_MEX_The_Mexico_City_Putsch:0 "The Mexico City Putsch"
-  PB_MEX_The_Mexico_City_Putsch_desc:0 ""
+  PB_MEX_The_Mexico_City_Putsch_desc:0 "Agustin and his clique were always fools, damning this nations very soul since the days of independence, however Mexico has managed to claw itself out of its grave under the new leadership of Gustavo de Sicillia. The question now is whether this change of leadership is just what the Mexican people needed, only time will tell."
 
   PB_MEX_Stamp_Dowm_On_Defeatism:0 "Stamp Down On Defeatism"
   PB_MEX_Stamp_Dowm_On_Defeatism_desc:0 ""
@@ -364,25 +370,25 @@
   PB_MEX_The_Hispanic_Workhorse_desc:0 "The Empire of Mexico has proven global economic analysts wrong, many had said that the economic future of our nation was bleak at best, and even more had fooled themselves that Mexican bankruptcy was all but guaranteed. But thanks to our capable and dedicated pool of bankers and ministers Mexico has bounced back stronger than ever before."
 
   PB_MEX_Doctrinal_Evolution:0 "Doctrinal Evolution"
-  PB_MEX_Doctrinal_Evolution_desc:0 ""
+  PB_MEX_Doctrinal_Evolution_desc:0 "The Mexican army has entered a state of doctrinal regression. Many officers are either corrupt, stupid, or both and have no interest to expand the nations military might. They instead see trench warfare as the only means of conducting modern warfare and reject any ideas of adopting or implementing any new technologies or strategical ideas. It is time we changed this."
 
   PB_MEX_Sideline_The_Reformists:0 "Sideline The Reformists"
-  PB_MEX_Sideline_The_Reformists_desc:0 ""
+  PB_MEX_Sideline_The_Reformists_desc:0 "The Mexican military has always remained a well-conditioned and disciplined fighting force, precisely because of its adherence to the tried and tested tactics of the Great War. The experience many generals and soldiers had received during their years under the Mexican expeditionary force in France should not be chucked away because some eager and foolish young men think they know better."
 
   PB_MEX_Renovate_The_Veracruze_Shipping_Board:0 "Renovate The Veracruze Shipping Board"
-  PB_MEX_Renovate_The_Veracruze_Shipping_Board_desc:0 ""
+  PB_MEX_Renovate_The_Veracruze_Shipping_Board_desc:0 "While the Mexican navy may be small and young it has plenty of room to grow. By renovating the now dilapidated dockyards of Veracruze we will be able to fund additional constructions of more capable larger naval vessels."
 
   PB_MEX_Death_From_The_Skies:0 "Death From The Skies"
-  PB_MEX_Death_From_The_Skies_desc:0 ""
+  PB_MEX_Death_From_The_Skies_desc:0 "It has been said that a single bomber squadron is enough to break the spirit of the enemy, with enough sustained fire and bombardment from the skies the enemy will have no option but to flee their war-torn lands in a desperate bid to find shelter."
 
   PB_MEX_The_New_Mexican_Army:0 "The New Mexican Army"
-  PB_MEX_The_New_Mexican_Army_desc:0 ""
+  PB_MEX_The_New_Mexican_Army_desc:0 "Mexico and its military remian at the forefront of our enemies thoughts. From what was once a mere collection of wandering fools is now of the the worlds most developed and feared armies. The first of many steps have been taken in the name of reclaiming our nations lost glory. "
 
   PB_MEX_Heavens_Finest_Flyers:0 "Heavens Finest Flyers"
-  PB_MEX_Heavens_Finest_Flyers_desc:0 ""
+  PB_MEX_Heavens_Finest_Flyers_desc:0 "If the Great War proved one thing it is that the battle for the heavens will undeniably shift the tide of battle for all of history. While traditional ground troop formations will still do a sound job against technologically inferior enemies the same cannot be said for many of our neighbours up north.  If we plan on reclaiming our lost empire then we best be prepared on all possible fronts."
 
   PB_MEX_Small_Scale_Naval_Developments:0 "Small Scale Naval Developments"
-  PB_MEX_Small_Scale_Naval_Developments_desc:0 ""
+  PB_MEX_Small_Scale_Naval_Developments_desc:0 "The Mexican navy will always remain an afterthought, so why bother expending government money for a sector of the military that would never be able to play catch up with the rest of the world? Instead, we should focus the naval budget on developing smaller naval craft for the defence of our nation’s shores."
 
   PB_MEX_Our_Finest_Hour:0 "Our Finest Hour"
   PB_MEX_Our_Finest_Hour_desc:0 ""
