--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -304,13 +304,13 @@
   PB_MEX_The_Mexico_City_Putsch_desc:0 "Agustin and his clique were always fools, damning this nations very soul since the days of independence, however Mexico has managed to claw itself out of its grave under the new leadership of Gustavo de Sicillia. The question now is whether this change of leadership is just what the Mexican people needed, only time will tell."
 
   PB_MEX_Stamp_Dowm_On_Defeatism:0 "Stamp Down On Defeatism"
-  PB_MEX_Stamp_Dowm_On_Defeatism_desc:0 ""
+  PB_MEX_Stamp_Dowm_On_Defeatism_desc:0 "The Mexican spirit has seen better days. War, economic stagnation, political unrest, falling living standards, and the threat of revolution have all played their part in poisoning the soul of this once great nation. The time has come for the government to heavily invest into propaganda to lift the spirits of the people, there shall not be a street corner without the Mexican flag nor one without a proud patriot."
 
   PB_MEX_Halt_The_Brain_Drain:0 "Halt The Brain Drain"
-  PB_MEX_Halt_The_Brain_Drain_desc:0 ""
+  PB_MEX_Halt_The_Brain_Drain_desc:0 "Ever since the crisis of 1878 the most intellectual of Mexicans have fled the country for greener pastures, typically to the northern breakaways. Only a handful with economic and political gain have decided to stay within the country. The end result is a government of highly corrupt idiots who either don’t know how to count to ten or choose not to. Either way we cannot see our youth flee our nations borders, whether they like it or not they will stay in this country till the day they die."
 
   PB_MEX_Restore_The_Academia:0 "Restore The Academia"
-  PB_MEX_Restore_The_Academia_desc:0 ""
+  PB_MEX_Restore_The_Academia_desc:0 "Despite our best efforts to halt the fleeing of Mexican intellectuals a new problem has arisen. Many refuse to partake in the political process of the nation of any major industrial sectors out of fear. Families of middle-class Mexicans and even some elites have taken to laborious jobs to avoid the eye of Mexico. Why incentivizing and reassuring such people that they are of no interest to the government we may be able to convince them to join and expand Mexico’s lacking education sector."
 
   PB_MEX_Reaffirm_The_Tordesiallas_Treaty:0 "Reaffirm The Tordesiallas Treaty"
   PB_MEX_Reaffirm_The_Tordesiallas_Treaty_desc:0 ""
