--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -37,8 +37,14 @@
 
   MEX_ds_exile_long:0 "Restos Monárquicos Exiliados"
   MEX_ds_exile:0 "Restos Monárquicos Exiliados"
- 
 
+  ##########################
+  # TRAITS
+  ##########################
+
+  trait_MEX_agustin_iv_emperor:0 "Grand Emperor of the Empire of Mexico"
+  trait_MEX_agustin_iv_emperor_desc:0 "Agustin IV is the undisputed Emperor of the Empire of Mexico, many are willing to do or die under his name."
+  PB_Emperor_Of_All_Mexicans:0 "Emperor of all Mexicans"
 
   ##########################
   # TECH TEAMS
@@ -88,6 +94,7 @@
   ##########################
 
   MEX_Bandit_Haven:0 "Bandit Haven"
+  MEX_Independencia_Union_Religion:0 "Independencia, Unión, Religión"
 
   ##########################
   # APRIL CRISIS
