Northwest Territory Colonial Authority

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -681,7 +681,7 @@
  STATE_680:0 "Upper Mesopotamia"
  STATE_681:0 "Noordkaap"
  STATE_682:0 "Northern Ontario"
- STATE_683:0 "Northeastern Canada"
+ STATE_683:0 "Keewatin"
  STATE_684:0 "Caroline Islands"
  STATE_685:0 "Champagne-Ardenne"
  STATE_686:0 "Puerto Rico"
