--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -117,7 +117,7 @@
  STRATEGICREGION_117:0 "East Coast"
  STRATEGICREGION_118:0 "Cascadia"
  STRATEGICREGION_119:0 "New Mexico"
- STRATEGICREGION_120:0 "Lakota Country"
+ STRATEGICREGION_120:0 "The Great Plains"
  STRATEGICREGION_121:0 "Eastern Canada"
  STRATEGICREGION_122:0 "Western Canada"
  STRATEGICREGION_123:0 "Mexico"
